style_index.css
/* Fonts */

@font-face
{
    font-family: 'Raleway';
    src:url('polices/Raleway-Medium.ttf');
}

@font-face
{
    font-family: 'Raleway-Thin';
    src:url('polices/Raleway-Thin.ttf');
}

*
{
    font-family: 'Raleway';
}

h3
{
    font-family: 'Raleway-Thin';
}

/* Navigation */
nav
{
    display: flex;
    width: 100%;
    align-items: center;
}

.top_bar
{
    display: flex;
    justify-content: flex-end;
    width: 100%;
    padding-right: 20px;
}

nav a
{
    text-decoration: none;
    font-size: 1.2em;
    margin: 10px;
    color: black;
    padding-top: 20px;
}

nav a:hover
{
    border-top: solid #0065FC;
}

.inscription
{
    color: #0065FC;
}
.logo
{
    height: 60px;
    width: 160px;
}
.content, nav
{
    margin: auto;
    width: 1550px;
}
.content
{
    padding: 20px;
}

body
{
    margin: 0;
    padding: 0;
}

/* Search Bar */ 

.search_bar
{
    display: flex;
    height: 50px;
}

.city_textfield
{
    width: 300px;
    border-left: none;
    border-right: none;
    border: solid 2px #f2f2f2;
    font-size: 1.2em;
    padding-left: 10px;
}

.location_button
{
    width: 50px;
    border: none;
    border-bottom-left-radius: 12px;
    border-top-left-radius: 12px;
    border: solid 2px #F2F2F2;
    background: url("images/logo/location_logo.png") no-repeat center;
    background-color: #F2F2F2;
    min-width: 50px;
}

.search_button
{
    width: 170px;
    background-color: #0065FC;
    border-top-right-radius: 12px;
    border-bottom-right-radius: 12px;
    border: none;
    font-size: 1.2em;
    color: white;
}

.city
{
    display: flex;
    flex-direction: column;
}

/* Filters */

.filters
{
    margin-top: 20px;
    display: flex;
    align-items: center;
}

.filters p
{
    margin-right: 30px;
}

.city_info
{
    display: flex;
    margin-top: 10px;
}

.info_logo
{
    color: #0065FC;
    margin-right: 10px;
    border: solid 1px gray;
    border-radius: 15px;
    margin: 10px;
    padding-left: 12px;
    padding-right: 12px;
    padding-top: 6px;
}


input[type="checkbox"]
{
    -webkit-appearance: none;
    -moz-appearance: none;
    -ms-appearence: none;
}

input[type=checkbox] {
    border-radius: 30px;
    height: 35px;
    width: 35px;
    background: #fff;
    border: 1px solid #ccc;
}

#eco, #family, #romantic, #animals
{
    background-color: #DEEBFF;
    opacity: 0.8;
    margin: 0;
}


#romantic
{
    background: url("images/logo/romantic_logo.PNG") no-repeat center;
    background-color: #DEEBFF;
}

#family
{
    background: url("images/logo/familial_logo.PNG") no-repeat center;
    background-color: #DEEBFF;
}

#eco
{
    background: url("images/logo/cash_logo.PNG") no-repeat center;
    background-color: #DEEBFF;
}

#animals
{
    background: url("images/logo/animals_logo.png") no-repeat center;
    background-color: #DEEBFF;
}


#eco:hover, #family:hover, #romantic:hover, #animals:hover
{
    border: none;
}

#eco:active, #eco:focus, #family:active, #family:focus, #romantic:active, #romantic:focus, #animals:active, #animals:focus, .location_button:active, .location_button:focus, .search_button:active, .search_button:focus, .city_textfield:active, .city_textfield:focus
{
    outline: none;
}

.filters label
{
   
    border-bottom-right-radius: 15px;
    border-top-right-radius: 15px;
    padding-top: 10px;
    padding-bottom: 6px;
    padding-right: 10px;
    padding-left: 5px;
    border-left: none;
}

.eco, .family, .romantic, .animals
{
    display:flex;
    border: solid 1px #D9D9D9;
    border-radius: 20px;
    margin: 0;
    padding: 0;
    align-content: center;
    border-left: none;
    margin-left: 10px;
    margin-right: 10px;
}

/* Rooms list */

#hebergement
{
    display: flex;
}

.hebergement_list a
{
    text-decoration: none;
    color: black;
    width: 260px;
    height: 210px;
    margin-bottom: 40px;
    border-radius: 20px;
    transition-duration: 0.2s;
}

.hebergement_list a:hover
{
    box-shadow: -1px 2px 27px 0px rgba(189,189,189,0.65);
}

.hebergement_list
{
    background-color: #F2F2F2;
    width: 60%;
    border-radius: 20px;
    padding-left: 40px;
    padding-right: 40px;
    padding-top: 30px;
    padding-bottom: 30px;
    max-width: 900px;
    min-width: 900px;
    margin-right: 50px;
    max-height: 600px;
}

.hebergement_list h1, .most_popular h1, .activities h1
{
    font-size: 1.3em;
}

.hebergement_list ul
{
    display: flex;
    flex-wrap: wrap;
    padding-inline-start: 0;
    justify-content: space-between;
    margin-top: 30px;

}

.hebergement_list li
{
    display: flex;
    flex-direction: column;
    width: 250px;
    height: 200px;
    border-radius: 20px;
    background-color: white;
    list-style-type: none;
    padding: 5px;
    margin-bottom: 40px;
    margin-right: 40px;
}

.room_image
{
    width: 250px;
    height: 120px;
    border-top-right-radius: 20px;
    border-top-left-radius: 20px;
}

.hebergement_list h2, .most_popular h2
{
    font-size: 1.1em;
    margin-bottom: 0;
    margin-left: 10px;
}

.hebergement_list h3, .most_popular h3
{
    font-size: 0.9em;
    margin-left: 10px;
    margin-top: 5px;
    margin-bottom: 7px;
}

.classement
{
    width: 50px;
    height: 9px;
    margin-top: 0;
    margin-left: 10px;
}

/* Most Popular */

.most_popular
{
    background-color: #F2F2F2;
    min-width: 479px;
    max-width: 479px;
    border-radius: 20px;
    padding-left: 40px;
    padding-top: 30px;
    padding-bottom: 30px;
    max-height: 600px;
}

.most_popular a
{
    text-decoration: none;
    color: black;
    border-radius: 20px;
    height: 150px;
    margin-bottom: 40px;
    transition-duration: 0.2s;
    margin-right: 40px;
}

.most_popular a:hover
{
    box-shadow: -1px 2px 27px 0px rgba(189,189,189,0.65);
}

.most_popular_title
 {
     display: flex;
 }

.most_popular_title img
 {
     width: 25px;
     height: 25px;
     align-self: center;
     margin-left: 216px;    
}
.most_popular ul
{
    display: flex;
    flex-direction: column;
    padding-inline-start: 0;
}

.most_popular li
{
    list-style-type: none;
    background-color: white;
    border-radius: 20px;
    display: flex;
    padding: 5px;
    margin-bottom: 40px;

}

.popular_room_image
{
    width: 140px;
    height: 140px;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
}

.classement_most_popular
{
    width: 50px;
    height: 9px;
    margin-left: 10px;
    margin-top: 40px;
}

/* Activities */

#activities
{
    display: flex;
    margin-top: 40px;
    flex-direction: column;
    max-width: 1522px;
}

.activitie_image_large
{
    width: 350px;
    height: 450px;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
}

.activitie_image_medium
{
    width: 350px;
    height: 205px;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
}

.activitie_image_small
{
    width: 350px;
    height: 150px;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
}

#activities a
{
    box-shadow: -1px 2px 27px 0px rgba(189,189,189,0.65);
    width: 347px;
    border-radius: 20px;
    text-decoration: none;
    color: black;
    transition-duration: 0.6s;
    height: fit-content;
    margin-left: 0;
    margin-bottom: 40px;
    margin-right: 40px;
}

#activities ul
{
    display: flex;
    padding-inline-start: 0; 
    list-style-type: none;
    flex-wrap: wrap;
    flex-direction: column;
    max-height: 600px;
}

#activities h1
{
    font-size: 1.3em;
    margin-left: 20px;
}
#activities h2
{
    font-size: 1.1em;
    margin-left: 20px;
}

#activities a:hover
{
    box-shadow: none;
    background-color: #F2F2F2;
}

/* Footer */

footer h1
{
    font-size: 1.1em;
}

footer
{
    display: flex;
    background-color: #F2F2F2;
    padding: 20px;
    padding-left: 40px;
}

footer a
{
    text-decoration: none;
    color: black;
}
footer ul
{
    padding-inline-start: 0;
}

footer li
{
    list-style-type: none;
    margin-bottom: 15px;
}

footer div 
{
    margin-right: 100px;
}

footer a:hover
{
    text-decoration: underline;
}


/* media responsive */

/* Mobile */

@media screen and (max-width: 768px)
{
    #hebergement
    {
        display: flex;
        flex-direction: column-reverse;
    }

    .hebergement_list
    {
        flex-direction: column;
    }

    .top_bar
    {
        flex-wrap: wrap;
    }
}

/* Tablette */

@media screen and (max-width: 1024px)
{
    
}

